# Hospital_system

./: .env.example  .gitignore  Pruebas de API - Gestion Medica.postman_collection.json  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
backend/: app.py
backend/app/: config.py  main.py
backend/app/aplication/services/: agenda_cita_service.py
backend/app/domain/cita/: cita.py  disponibilidad.py  especialidad.py  paciente.py
backend/app/infraestructure/adapters/input/rest/: paciente_rest_adapter.py
backend/app/infraestructure/database/: db.py
